--- a/src/app/components/shop/item-card/item-card.component.scss
+++ b/src/app/components/shop/item-card/item-card.component.scss
@@ -1,6 +1,7 @@
 .item-card {
   display: flex;
   align-items: flex-start;
+  cursor: pointer;
 
   .item-card-inner {
     display: flex;
@@ -16,6 +17,10 @@
     border-radius: 32px;
     background: #fff;
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
+
+    &:hover {
+      box-shadow: 0 0 4px 0 rgba(#000000, 0.25);
+    }
 
     .item-card-objects {
       display: flex;
@@ -72,7 +77,8 @@
           font-size: 16px;
           font-style: normal;
           font-weight: 400;
-          line-height: 24px; /* 150% */
+          line-height: 24px;
+          /* 150% */
         }
 
         .price {
@@ -81,7 +87,8 @@
           font-size: 32px;
           font-style: normal;
           font-weight: 400;
-          line-height: 24px; /* 75% */
+          line-height: 24px;
+          /* 75% */
         }
       }
     }
