--- a/src/app/components/shop/shop-body/shop-popup/shop-popup.component.scss
+++ b/src/app/components/shop/shop-body/shop-popup/shop-popup.component.scss
@@ -43,9 +43,14 @@
             display: flex;
             min-width: 288px;
             flex-direction: column;
+            align-items: center;
             justify-content: center;
-            align-items: flex-start;
+            // align-items: flex-start;
             flex: 1 0 0;
+
+            .galleria-wrapper {
+                width: 80%;
+            }
 
             // ::ng-deep .p-galleria-thumbnail-item img.custom-thumbnail {
             //     max-width: 80px;
