--- a/src/app/components/dummy/landing/landing.component.html
+++ b/src/app/components/dummy/landing/landing.component.html
@@ -3,3 +3,5 @@
 <a routerLink="/register">REGISTER</a>
 <br>
 <a routerLink="/shop">SHOP</a>
+<br>
+<a routerLink="/verify-login">LOGIN VERIFICATION</a>
