feat: implement cart window

--- a/src/app/components/dummy/landing/landing.component.html
+++ b/src/app/components/dummy/landing/landing.component.html
@@ -4,4 +4,6 @@
 <br>
 <a routerLink="/shop">SHOP</a>
 <br>
+<a routerLink="/cart">CART</a>
+<br>
 <a routerLink="/verify-login">LOGIN VERIFICATION</a>
