feat: add crud functionality to cart window

--- a/src/app/components/shop/shop-body/shop-popup-edit/shop-popup-edit.component.html
+++ b/src/app/components/shop/shop-body/shop-popup-edit/shop-popup-edit.component.html
@@ -94,8 +94,7 @@
 
             </div>
             <div class="details-buttons">
-                <p-button label="Carro" severity="secondary" (onClick)="addToCart()" [loading]="addToCartLoading"/>
-                <p-button label="Comprar" />
+                <p-button label="Desa" (onClick)="save()" [loading]="addToCartLoading"/>
             </div>
         </div>
     </div>
