--- a/src/app/components/shop/shop-cart-items/shop-cart-items.component.scss
+++ b/src/app/components/shop/shop-cart-items/shop-cart-items.component.scss
@@ -150,4 +150,36 @@
         display: flex;
         gap: 24px;
     }
+
+    .no-item-wrapper {
+        display: flex  ;
+        flex-direction: column;
+        gap: 16px;
+justify-content: center;
+align-items: center;
+        img {
+            height: 350px;
+            width: 350px;
+        }
+
+        .title {
+            color: #000;
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; /* 100% */
+        }
+
+        .desc {
+            color: #262626;
+text-align: center;
+font-family: Inter;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 150% */
+        }
+    }
 }
