feat: create checkout form

--- a/src/app/components/dummy/landing/landing.component.html
+++ b/src/app/components/dummy/landing/landing.component.html
@@ -6,4 +6,6 @@
 <br>
 <a routerLink="/cart">CART</a>
 <br>
+<a routerLink="/checkout">CART CHECKOUT</a>
+<br>
 <a routerLink="/verify-login">LOGIN VERIFICATION</a>
