feat: add drac_rest asset. split checkout form into subforms.

--- a/src/app/components/shop/shop-cart-items/shop-cart-items.component.html
+++ b/src/app/components/shop/shop-cart-items/shop-cart-items.component.html
@@ -43,7 +43,7 @@
     </div>
     } @else {
     <div class="no-item-wrapper">
-        <img src="https://dummyimage.com/195x195/FFFF00/33FF57">
+        <img src="assets/drac_rest.svg">
         <span class="title">El teu carro està buit</span>
         <span class="desc">Sembla que encara no hi ha res per aquí… però això té fàcil solució. <br>
             Descobreix les nostres novetats!</span>
