--- a/src/app/components/shop/shop-cart-items/shop-cart-items.component.scss
+++ b/src/app/components/shop/shop-cart-items/shop-cart-items.component.scss
@@ -163,7 +163,6 @@
 
         img {
             height: 350px;
-            width: 350px;
         }
 
         .title {
@@ -174,6 +173,7 @@
             font-style: normal;
             font-weight: 500;
             line-height: 24px;
+            margin-top: 32px;
             /* 100% */
         }
 
