--- a/src/app/components/checkout/shipment/recipient-popup/recipient-popup.component.html
+++ b/src/app/components/checkout/shipment/recipient-popup/recipient-popup.component.html
@@ -18,7 +18,7 @@
                     <label for="phone">Telèfon</label>
                 </p-floatlabel>
             </div>
-            <div class="add-popup-buttons" (click)="persistAddress()">
+            <div class="add-popup-buttons" (click)="persistRecipient()">
                 <p-button label="Afegir">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M9 18L15 12L9 6" stroke="white" stroke-width="2" stroke-linecap="round"
