--- a/src/app/components/shop/shop-body/shop-popup/shop-popup.component.scss
+++ b/src/app/components/shop/shop-body/shop-popup/shop-popup.component.scss
@@ -5,7 +5,7 @@
     min-width: 328px;
     max-width: 1280px;
     padding: 40px;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: flex-start;
     gap: 40px;
@@ -16,28 +16,18 @@
     background: #FFF;
     // box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.10);
 
-    .product-close {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        align-self: stretch;
 
-        svg {
-            width: 24px;
-            height: 24px;
-            cursor: pointer;
-        }
 
-    }
 
     .product-body {
         display: flex;
-        align-items: center;
-        align-content: center;
+        // align-items: center;
+        // align-content: center;
         gap: 40px 40px;
         align-self: stretch;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         height: 100%;
+        width: 100%;
 
         .galleria {
             display: flex;
@@ -46,245 +36,261 @@
             align-items: center;
             justify-content: center;
             // align-items: flex-start;
-            flex: 1 0 0;
+            width: 48%;
 
             .galleria-wrapper {
                 width: 80%;
             }
 
-            // ::ng-deep .p-galleria-thumbnail-item img.custom-thumbnail {
-            //     max-width: 80px;
-            //     height: auto;
-            //     object-fit: contain;
-            // }
         }
 
-        .details {
-
+        .cross-details {
             display: flex;
-            min-width: 288px;
             flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            gap: 80px;
-            flex: 1 0 0;
+            width: 48%;
 
-
-            .details-body {
+            .product-close {
                 display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 12px;
+                align-items: center;
+                gap: 10px;
                 align-self: stretch;
+                justify-content: flex-end;
 
-                .details-attr {
+                svg {
+                    width: 24px;
+                    height: 24px;
+                    cursor: pointer;
+                }
+
+            }
+
+            .details {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                min-width: 288px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 80px;
+                flex: 1 0 0;
+
+
+                .details-body {
                     display: flex;
                     flex-direction: column;
                     align-items: flex-start;
                     gap: 12px;
                     align-self: stretch;
 
-                    .details-attr-title {
-                        color: #262626;
-                        font-family: Inter;
-                        font-size: 36px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: 36px;
+                    .details-attr {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 12px;
+                        align-self: stretch;
+
+                        .details-attr-title {
+                            color: #262626;
+                            font-family: Inter;
+                            font-size: 36px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 36px;
+                        }
+
+                        .details-attr-price {
+                            color: #262626;
+                            font-family: Inter;
+                            font-size: 48px;
+                            font-style: normal;
+                            font-weight: 600;
+                            line-height: 48px;
+                        }
+
+                        .details-attr-desc {
+                            color: #262626;
+                            text-align: justify;
+                            font-family: Inter;
+                            font-size: 16px;
+                            font-style: normal;
+                            font-weight: 400;
+                            line-height: 24px;
+                        }
+
                     }
 
-                    .details-attr-price {
-                        color: #262626;
-                        font-family: Inter;
-                        font-size: 48px;
-                        font-style: normal;
-                        font-weight: 600;
-                        line-height: 48px;
+                    .details-meas {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 12px;
+                        align-self: stretch;
+
+                        .details-meas-list {
+                            display: flex;
+                            align-items: flex-start;
+                            gap: 10px;
+
+                            .details-meas-item {
+                                display: flex;
+
+                                padding: 2px;
+                                gap: 10px;
+
+                                width: 33px;
+                                height: 33px;
+                                flex-direction: column;
+                                justify-content: center;
+                                align-items: center;
+
+                                border-radius: 8px;
+                                background: #E6E6E6;
+
+                                cursor: pointer;
+
+                                &:hover {
+                                    box-shadow: 0 0 4px 0 rgba(#000000, 0.5);
+                                }
+
+                                &.selected {
+                                    border: 1px solid #262626;
+                                }
+                            }
+                        }
+
                     }
 
-                    .details-attr-desc {
+                    .details-colors {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 12px;
+                        align-self: stretch;
+
+                        .details-colors-list {
+                            display: flex;
+                            align-items: flex-start;
+                            gap: 10px;
+
+                            .details-colors-item {
+                                display: flex;
+
+                                padding: 2px;
+                                align-items: center;
+
+                                width: 33px;
+                                height: 33px;
+                                aspect-ratio: 1/1;
+
+                                border-radius: 50px;
+                                cursor: pointer;
+
+                                &:hover {
+                                    box-shadow: 0 0 4px 0 rgba(#000000, 0.5);
+                                }
+
+                                &.selected {
+                                    border: 1px solid #262626;
+                                }
+                            }
+                        }
+
+
+                    }
+
+                    .details-amount {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        gap: 12px;
+                        align-self: stretch;
+
+                        .input-number-container {
+                            display: flex;
+                            width: 122px;
+                            height: 39px;
+                            padding: 2px;
+                            align-items: center;
+                            border-radius: 10px;
+                            // border: 1px solid #C8C8C8;
+                            // background: #FFF;
+                            // box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+
+                            ::ng-deep .p-inputnumber-input {
+                                text-align: center;
+                            }
+                        }
+                    }
+
+
+                    // Shared elements 
+                    .details-subtitle {
                         color: #262626;
-                        text-align: justify;
                         font-family: Inter;
                         font-size: 16px;
                         font-style: normal;
-                        font-weight: 400;
+                        font-weight: 600;
                         line-height: 24px;
-                    }
+                        /* 150% */
 
+                    }
                 }
 
-                .details-meas {
+                .details-buttons {
+
                     display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 12px;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 40px;
                     align-self: stretch;
 
-                    .details-meas-list {
+                    .button-cart {
                         display: flex;
-                        align-items: flex-start;
-                        gap: 10px;
-
-                        .details-meas-item {
-                            display: flex;
-
-                            padding: 2px;
-                            gap: 10px;
-
-                            width: 33px;
-                            height: 33px;
-                            flex-direction: column;
-                            justify-content: center;
-                            align-items: center;
-
-                            border-radius: 8px;
-                            background: #E6E6E6;
-
-                            cursor: pointer;
-
-                            &:hover {
-                                box-shadow: 0 0 4px 0 rgba(#000000, 0.5);
-                            }
-
-                            &.selected {
-                                border: 1px solid #262626;
-                            }
-                        }
-                    }
-
-                }
-
-                .details-colors {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 12px;
-                    align-self: stretch;
-
-                    .details-colors-list {
-                        display: flex;
-                        align-items: flex-start;
-                        gap: 10px;
-
-                        .details-colors-item {
-                            display: flex;
-
-                            padding: 2px;
-                            align-items: center;
-
-                            width: 33px;
-                            height: 33px;
-                            aspect-ratio: 1/1;
-
-                            border-radius: 50px;
-                            cursor: pointer;
-
-                            &:hover {
-                                box-shadow: 0 0 4px 0 rgba(#000000, 0.5);
-                            }
-
-                            &.selected {
-                                border: 1px solid #262626;
-                            }
-                        }
-                    }
-
-
-                }
-
-                .details-amount {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: flex-start;
-                    gap: 12px;
-                    align-self: stretch;
-
-                    .input-number-container {
-                        display: flex;
-                        width: 122px;
-                        height: 39px;
-                        padding: 2px;
+                        min-width: 82.5px;
+                        max-width: 212px;
+                        padding: 10px 0;
+                        justify-content: center;
                         align-items: center;
-                        border-radius: 10px;
-                        // border: 1px solid #C8C8C8;
-                        // background: #FFF;
-                        // box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
-
-                        ::ng-deep .p-inputnumber-input {
-                            text-align: center;
-                        }
+                        gap: 10px;
+                        flex: 1 0 0;
+                        border-radius: 50px;
+                        border: 1px solid #68A68F;
                     }
-                }
+
+                    .button-buy {
+                        display: flex;
+                        min-width: 82.5px;
+                        max-width: 212px;
+                        padding: 10px 0;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 10px;
+                        flex: 1 0 0;
+                        border-radius: 50px;
+                        background: #68A68F;
+                    }
 
 
-                // Shared elements 
-                .details-subtitle {
-                    color: #262626;
-                    font-family: Inter;
-                    font-size: 16px;
-                    font-style: normal;
-                    font-weight: 600;
-                    line-height: 24px;
-                    /* 150% */
+                    ::ng-deep .p-button {
+                        display: flex;
+                        width: 200px;
+                        // min-width: 100.5px;
+                        // max-width: 212px;
+                        padding: 10px 0;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 10px;
+                        flex: 1 0 0;
+                        border-radius: 50px;
+
+                        border: 1px solid #68A68F;
+                    }
 
                 }
             }
 
-            .details-buttons {
-
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 40px;
-                align-self: stretch;
-
-                .button-cart {
-                    display: flex;
-                    min-width: 82.5px;
-                    max-width: 212px;
-                    padding: 10px 0;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 10px;
-                    flex: 1 0 0;
-                    border-radius: 50px;
-                    border: 1px solid #68A68F;
-                }
-
-                .button-buy {
-                    display: flex;
-                    min-width: 82.5px;
-                    max-width: 212px;
-                    padding: 10px 0;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 10px;
-                    flex: 1 0 0;
-                    border-radius: 50px;
-                    background: #68A68F;
-                }
-
-
-                ::ng-deep .p-button {
-                    display: flex;
-                    width: 200px;
-                    // min-width: 100.5px;
-                    // max-width: 212px;
-                    padding: 10px 0;
-                    justify-content: center;
-                    align-items: center;
-                    gap: 10px;
-                    flex: 1 0 0;
-                    border-radius: 50px;
-
-                    border: 1px solid #68A68F;
-                }
-
-            }
         }
-
     }
-
 
 }
